client/src/components/shared/Header/Header.css
.header {
  margin: 0;
  position: fixed;
  background-color: #e8e4d9;
  width: 100%;
  height: 120px;
  z-index: 1;
  top: 0;
  padding-left: 20px;
  padding-right: 20px;
  min-width: 100%;
}

.header-span:hover {
  cursor: pointer;
  max-width: 100%;
  padding-bottom: 5px;
  position: relative;
}

.header-span:hover:after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  background: #759f5c;
  height: 3px;
  border-radius: 10px;
  border-width: 50%;
}

.dropdown-span:hover {
  cursor: pointer;
  max-width: 77.5%;
  padding-bottom: 5px;
  position: relative;
}

.dropdown-span:hover:after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  background: #759f5c;
  height: 3px;
  border-radius: 10px;
  border-width: 50%;
}

.dropdown-span2:hover {
  cursor: pointer;
  max-width: 84.5%;
  padding-bottom: 5px;
  position: relative;
}

.dropdown-span2:hover:after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  background: #759f5c;
  height: 3px;
  border-radius: 10px;
  border-width: 50%;
}

.menu {
  display: flex;
  align-content: center;
}

.header-link-container {
  display: flex;
  padding: 10px;
}

.header-link:hover {
  margin-bottom: -5px;
}

.header-link {
  text-decoration: none;
  text-align: center;
  color: #3d3d3d;
  display: flex;
  align-items: center;
  font-size: 16px;
  font-family: Montserrat, Semi bold;
  font-weight: 600;
}

#link-plan {
  max-width: 240px;
}

#header-transport {
  display: flex;
}

#link-transport {
  min-width: 183px;
  max-width: 250px;
}

.header-image {
  height: 100px;
  width: 100px;
}

.header-image2 {
  z-index: 1;
  height: 100px;
  width: 100px;
  object-fit: contain;
  position: absolute;
}

.header-image-user {
  border-radius: 50%;
  max-width: 70px;
  max-height: 70px;
  margin-top: 15px;
  object-fit: contain;
  margin-left: 15px;
}
.burger-image {
  display: none;
}

.root-image {
  display: none;
  max-height: 45px;
}

.root-image2 {
  display: none;
  max-height: 55px;
  max-width: 300px;
  margin-left: 250px;
  position: fixed;
  top: 10px;
}

.profile-pic {
  display: none;
}

.userpic-container {
  position: fixed;
  top: 17px;
  right: 5px;
}

.root-image-container {
  display: flex;
  align-items: center;
  justify-content: center;
}

.dropdownmenu {
  display: flex;
  flex-direction: column;
  text-align: left;
  background-color: white;
  position: fixed;
  margin-top: 55px;
  margin-left: -15px;
  white-space: nowrap;
}

.dropdown-item {
  display: flex;
  text-decoration: none;
  color: #3d3d3d;
  margin: 25px 10px 25px 15px;
}

#header-account-link:hover {
  margin-bottom: 0px;
}

@media (max-width: 500px) {
  .header {
    padding: initial;
  }

  .header-image {
    display: none;
  }

  .header-image-user {
    display: none;
  }

  .header-home {
    margin-top: -250px;
    margin-right: 90px;
  }

  .header-span:active {
    cursor: pointer;
    max-width: 100%;
    padding-bottom: 5px;
    position: relative;
  }

  .header-span:active:after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    background: #759f5c;
    height: 3px;
    border-radius: 10px;
  }

  .header-image2 {
    display: none;
  }

  .header-link:hover {
    margin-bottom: 0px;
  }

  .header-link {
    font-size: 16px;
    text-decoration: none;
    padding: initial;
  }

  .profile-pic {
    display: flex;
    max-width: 50px;
    background-color: #999;
    border-radius: 50%;
    margin-top: -10px;
  }

  .root-image {
    display: block;
    padding: 1px;
    margin-top: 10px;
  }

  .header {
    background-color: #f2f2f2;
    height: 9vh;
  }

  .burger-image {
    display: flex;
    max-width: 50px;
    min-width: 50px;
    left: 17%;
    margin-right: 15px;
  }
}

